// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React Components test with Jest App Component with Snapshot 1`] = `
<div
  className="container-fluid"
>
  <h1>
    todos - 
    <span
      className="badge badge-info"
    >
      0
    </span>
  </h1>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <div
        className="rbt"
        style={
          Object {
            "outline": "none",
            "position": "relative",
          }
        }
        tabIndex={-1}
      >
        <div
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "height": "100%",
              "position": "relative",
            }
          }
        >
          <input
            aria-autocomplete="both"
            aria-expanded={false}
            aria-haspopup="listbox"
            autoComplete="off"
            className="rbt-input-main form-control rbt-input"
            disabled={false}
            id="add_todo_input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="What do you want to do?"
            role="combobox"
            type="text"
            value=""
          />
          <input
            aria-hidden={true}
            className="rbt-input-hint"
            readOnly={true}
            style={
              Object {
                "backgroundColor": "transparent",
                "borderColor": "transparent",
                "boxShadow": "none",
                "color": "rgba(0, 0, 0, 0.35)",
                "left": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
            tabIndex={-1}
            value=""
          />
        </div>
      </div>
      <div
        className="input-group"
      />
    </div>
    <div
      className="col"
    />
  </div>
  <ul
    className="list-group"
  >
    <div
      className="row"
    >
      <div
        className="col-4"
      >
        <div
          className="rbt"
          style={
            Object {
              "outline": "none",
              "position": "relative",
            }
          }
          tabIndex={-1}
        >
          <div
            style={
              Object {
                "display": "flex",
                "flex": 1,
                "height": "100%",
                "position": "relative",
              }
            }
          >
            <input
              aria-autocomplete="both"
              aria-expanded={false}
              aria-haspopup="listbox"
              autoComplete="off"
              className="rbt-input-main form-control rbt-input"
              disabled={true}
              id="edit_todo_input"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder=""
              role="combobox"
              type="text"
              value=""
            />
            <input
              aria-hidden={true}
              className="rbt-input-hint"
              readOnly={true}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "transparent",
                  "boxShadow": "none",
                  "color": "rgba(0, 0, 0, 0.35)",
                  "left": 0,
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
              tabIndex={-1}
              value=""
            />
          </div>
        </div>
        <div
          className="input-group"
        />
      </div>
      <div
        className="col"
      />
    </div>
  </ul>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <div
        className="row"
      >
        <div
          className="offset-md-3"
        >
          <button
            aria-label={null}
            className="btn btn-primary btn-sm"
            onClick={[Function]}
            type="button"
          >
            Add All
          </button>
        </div>
        <div
          className="offset-md-1"
        >
          <button
            aria-label={null}
            className="btn btn-success btn-sm"
            onClick={[Function]}
            type="button"
          >
            Complete All
          </button>
        </div>
        <div
          className="offset-md-1"
        >
          <button
            aria-label={null}
            className="btn btn-danger btn-sm"
            onClick={[Function]}
            type="button"
          >
            Delete All
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`React Components test with Jest Buttons Component with Snapshot 1`] = `
<div
  className="row"
>
  <div
    className="col-4"
  >
    <div
      className="row"
    >
      <div
        className="offset-md-3"
      >
        <button
          aria-label={null}
          className="btn btn-primary btn-sm"
          onClick={[Function]}
          type="button"
        >
          Add All
        </button>
      </div>
      <div
        className="offset-md-1"
      >
        <button
          aria-label={null}
          className="btn btn-success btn-sm"
          onClick={[Function]}
          type="button"
        >
          Complete All
        </button>
      </div>
      <div
        className="offset-md-1"
      >
        <button
          aria-label={null}
          className="btn btn-danger btn-sm"
          onClick={[Function]}
          type="button"
        >
          Delete All
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`React Components test with Jest InputForTodo Component with Snapshot 1`] = `
<div
  className="row"
>
  <div
    className="col-4"
  >
    <div
      className="rbt"
      style={
        Object {
          "outline": "none",
          "position": "relative",
        }
      }
      tabIndex={-1}
    >
      <div
        style={
          Object {
            "display": "flex",
            "flex": 1,
            "height": "100%",
            "position": "relative",
          }
        }
      >
        <input
          aria-autocomplete="both"
          aria-expanded={false}
          aria-haspopup="listbox"
          autoComplete="off"
          className="rbt-input-main form-control rbt-input"
          disabled={false}
          id="add_todo_input"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          role="combobox"
          type="text"
          value=""
        />
        <input
          aria-hidden={true}
          className="rbt-input-hint"
          readOnly={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "boxShadow": "none",
              "color": "rgba(0, 0, 0, 0.35)",
              "left": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          tabIndex={-1}
          value=""
        />
      </div>
    </div>
    <div
      className="input-group"
    />
  </div>
  <div
    className="col"
  />
</div>
`;

exports[`React Components test with Jest TodoList Component with Snapshot 1`] = `
<ul
  className="list-group"
>
  <div
    className="row"
  >
    <div
      className="col-4"
    >
      <div
        className="rbt"
        style={
          Object {
            "outline": "none",
            "position": "relative",
          }
        }
        tabIndex={-1}
      >
        <div
          style={
            Object {
              "display": "flex",
              "flex": 1,
              "height": "100%",
              "position": "relative",
            }
          }
        >
          <input
            aria-autocomplete="both"
            aria-expanded={false}
            aria-haspopup="listbox"
            autoComplete="off"
            className="rbt-input-main form-control rbt-input"
            disabled={true}
            id="edit_todo_input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder=""
            role="combobox"
            type="text"
            value=""
          />
          <input
            aria-hidden={true}
            className="rbt-input-hint"
            readOnly={true}
            style={
              Object {
                "backgroundColor": "transparent",
                "borderColor": "transparent",
                "boxShadow": "none",
                "color": "rgba(0, 0, 0, 0.35)",
                "left": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
            tabIndex={-1}
            value=""
          />
        </div>
      </div>
      <div
        className="input-group"
      />
    </div>
    <div
      className="col"
    />
  </div>
</ul>
`;

exports[`React Components test with Jest TodoNode Component with Snapshot 1`] = `
<div
  className="row row-cols-4"
>
  <div
    className="col-1"
  >
    <input
      className=""
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="col-7"
  >
    <b />
  </div>
  <div
    className="col-1 offset-md-1"
  >
    <button
      aria-label={null}
      className="btn btn-warning btn-sm"
      onClick={[Function]}
      type="button"
    >
      Edit
    </button>
  </div>
  <div
    className="col-1"
  >
    <button
      aria-label={null}
      className="btn btn-danger btn-sm"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;
